--- a/other/meta.yaml
+++ b/other/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "test_anaconda" %}
-{% set version = "0.3" %}
+{% set version = "0.4" %}
 
 package:
     name: {{ name|lower }}
@@ -14,6 +14,7 @@ build:
 requirements:
     host:
         - pip
+        - setuptools
         - python >=3.5
     run:
         - python >=3.5
