--- a/.github/workflows/publish_conda.yaml
+++ b/.github/workflows/publish_conda.yaml
@@ -16,3 +16,4 @@ jobs:
         with:
           subDir: 'other'
           AnacondaToken: ${{ secrets.ANACONDA_TOKEN }}
+          platforms: 'noarch'
