--- a/other/meta.yaml
+++ b/other/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "test_anaconda" %}
-{% set version = "0.8" %}
+{% set version = "0.9" %}
 
 package:
     name: {{ name|lower }}
@@ -17,6 +17,8 @@ requirements:
         - setuptools
         - python >=3.5
     run:
+        - art >=1.8
+        - numpy >=1.9.0
         - python >=3.5
 about:
     home: https://github.com/sepandhaghighi/test_anaconda
