--- a/other/meta.yaml
+++ b/other/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "test_anaconda" %}
-{% set version = "0.9" %}
+{% set version = "1.0" %}
 
 package:
     name: {{ name|lower }}
@@ -27,10 +27,7 @@ about:
     license_file: LICENSE
     summary: Test Anaconda
     description: |
-        ASCII art is also known as "computer text art".
-        It involves the smart placement of typed special characters or
-        letters to make a visual shape that is spread over multiple lines of text.
-        ART is a Python lib for text converting to ASCII art fancy.
+         PyCM is a multi-class confusion matrix library written in Python that supports both input data vectors and direct matrix, and a proper tool for post-classification model evaluation that supports most classes and overall statistics parameters. PyCM is the swiss-army knife of confusion matrices, targeted mainly at data scientists that need a broad array of metrics for predictive models and accurate evaluation of a large variety of classifiers.
         
         Website: https://www.4r7.ir
         
